# wofares_game_engine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Folder.DotSettings  LICENSE  README.md  config.json  readme.md  vcpkg.json
assets/: assets_settings.json  automatic_weapon.aseprite  automatic_weapon.json  demon-escape.tiled-session  explosionFragments.json  pallet.aseprite  player.aseprite  portal.aseprite  tiles.aseprite  tiles.json  tiles.tsj
assets/animations/: building_block.aseprite  building_block.json  explosion_fragments.aseprite  explosion_fragments.json  fire-bomb.aseprite  fire-bomb.json  fireball.aseprite  fireball.json  player.aseprite  player.json  portal.aseprite  portal.json  scepter.aseprite  scepter.json  turret.aseprite  turret.json
assets/aseprite_pallets/: pallet v2.aseprite
assets/maps/: map.tmj  map0.tmj  map1.tmj  map2.tmj  map3.tmj  map4.tmj  tiles.aseprite  tiles.tsj
assets/sound_effects/: explosion_00.json  portal_feeds_00.json  portal_go_to_player_00.json  shot_fire_00.json
docs/: GAME_DESCRIPTION.md
scripts/: copy_map_from_tiled.py  pack_binaries.py  rename_to_index_html.py  vscode_tasks_generator.py
src/: CMakeLists.txt  main.cpp
src/ecs/components/: all_components.h  animation_components.h  event_components.h  game_components.h  game_state_component.h  physics_components.h  player_components.h  portal_components.h  rendering_components.h  timer_components.h  turret_component.h  weapon_components.h
src/ecs/systems/: all_systems.h  animation_update_system.cpp  animation_update_system.h  audio_system.cpp  audio_system.h  aux_systems.cpp  aux_systems.h  camera_control_system.cpp  camera_control_system.h  camera_system.cpp  camera_system.h  collision_systems.cpp  collision_systems.h  debug_system.cpp  debug_system.h  event_queue_system.cpp  event_queue_system.h  events_control_system.cpp  events_control_system.h  game_logic_system.cpp  game_logic_system.h  game_objects_render_system.cpp  game_objects_render_system.h  game_state_control_system.cpp  game_state_control_system.h  input_systems.cpp  input_systems.h  keyboard_state_systems.cpp  keyboard_state_systems.h  load_map_systems.cpp  load_map_systems.h  map_loader_system.cpp  map_loader_system.h  phisics_systems.cpp  phisics_systems.h  player_control_systems.cpp  player_control_systems.h  portals_game_logic_system.cpp  portals_game_logic_system.h  random_event_system.cpp  (+15 more)
src/ecs/systems/details/: coordinates_transformer.cpp  coordinates_transformer.h  game_objects_renderer.cpp  game_objects_renderer.h  map_loader.cpp  map_loader.h  objects_factory.cpp  objects_factory.h  physics_body_creator.cpp  physics_body_creator.h
src/graphics/: imgui_sdl_raii.h
src/utils/: angle_policy.h  animation.h  audio_system.cpp  audio_system.h  box2d_RAII.cpp  box2d_RAII.h  box2d_body_creator.cpp  box2d_body_creator.h  box2d_body_options.h  box2d_body_settings_helper.cpp  box2d_body_settings_helper.h  box2d_body_tuner.cpp  box2d_body_tuner.h  box2d_entt_contact_listener.cpp  box2d_entt_contact_listener.h  box2d_helpers.cpp  box2d_helpers.h  box2d_utils.cpp  collect_objects.cpp  collect_objects.h  collision_flags.h  collisions.cpp  collisions.h  colors.cpp  colors.h  coordinates_transformer.cpp  coordinates_transformer.h  draw.cpp  entt_collect_objects.cpp  entt_collect_objects.h  entt_registry_wrapper.cpp  entt_registry_wrapper.h  file_system.cpp  file_system.h  game_options.h  glm_box2d_conversions.cpp  glm_box2d_conversions.h  globals.h  imgui_sdl_RAII.cpp  imgui_sdl_RAII.h  (+38 more)
src/utils/RAII/: box2d_RAII.cpp  box2d_RAII.h  imgui_RAII.h  imgui_sdl_RAII.cpp  imgui_sdl_RAII.h  sdl_RAII.cpp  sdl_RAII.h  sdl_audio_RAII.cpp
src/utils/box2d/: box2d_body_options.h  box2d_body_tuner.cpp  box2d_body_tuner.h  box2d_glm_conversions.cpp  box2d_glm_conversions.h  box2d_glm_operators.cpp  box2d_math.cpp  box2d_math.h  box2d_utils.cpp  box2d_utils.h
src/utils/debug_draw/: draw_bounding_box.h
src/utils/debug_tools/: debug_draw_bounding_box.h
src/utils/entt/: entt_collect_objects.cpp  entt_registry_requests.h  entt_registry_wrapper.cpp  entt_registry_wrapper.h
src/utils/factories/: base_objects_factory.cpp  base_objects_factory.h  box2d_body_creator.cpp  box2d_body_creator.h  components_factory.cpp  components_factory.h  game_objects_factory.cpp  game_objects_factory.h  objects_factory.cpp  objects_factory.h  weapon_props_factory.cpp  weapon_props_factory.h
src/utils/imgui/: imgui_RAII.cpp
src/utils/network/: game_server.cpp  game_server.h  steam_networking_init_RAII.cpp  steam_networking_init_RAII.h  tcp_client.cpp  tcp_client.h  tcp_json_session.cpp  tcp_json_session.h  tcp_server.cpp  tcp_server.h
src/utils/network/asio/: tcp_client.cpp  tcp_client.h  tcp_json_session.cpp  tcp_json_session.h  tcp_server.h
src/utils/resources/: aseprite_data.cpp  aseprite_data.h  resource_cache.cpp  resource_cache.h  resource_manager.cpp  resource_manager.h
src/utils/sdl/: sdl_RAII.cpp  sdl_RAII.h  sdl_audio_RAII.cpp  sdl_colors.cpp  sdl_colors.h  sdl_draw.h  sdl_gfx_wrapper.cpp  sdl_gfx_wrapper.h  sdl_imgui_RAII.cpp  sdl_primitives_renderer.cpp  sdl_primitives_renderer.h  sdl_texture_process.cpp  sdl_texture_process.h  sdl_utils.cpp  sdl_utils.h
src/utils/systems/: audio_system.cpp  audio_system.h  box2d_entt_contact_listener.cpp  box2d_entt_contact_listener.h  event_queue_system.cpp  event_queue_system.h  game_state_control_system.cpp  game_state_control_system.h  input_event_manager.cpp  input_event_manager.h  random_event_system.cpp  random_event_system.h  screen_mode_control_system.cpp  screen_mode_control_system.h
tests/: CMakeLists.txt
tests/network_test/: CMakeLists.txt  main.cpp
tests/test_tcp_client/: CMakeLists.txt  main.cpp
tests/test_tcp_server/: CMakeLists.txt  main.cpp
